Add some styles to inputs and forms

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,5 +7,8 @@
   "SHARE_LINK": "Share link",
   "ACCESS_FILE": "Access File",
   "ACCESS_FILE_MSG": "You need to provide a passphrase to decrypt and get the file.",
-  "PASSPHRASE": "Passphrase"
+  "PASSPHRASE": "Passphrase",
+  "FILE": "File",
+  "SUBMIT": "Submit",
+  "BROWSE": "Browse"
 }
