--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,7 +7,14 @@
   "SHARE_LINK": "Share link",
   "ACCESS_FILE": "Access File",
   "ACCESS_FILE_MSG": "You need to provide a passphrase to decrypt and get the file.",
+  "NEW_ACCOUNT": "New account",
+  "NEW_ACCOUNT_MSG": "Create a new account to access to file upload.",
+  "USER_SAVED": "User saved",
+  "USER_SAVED_MSG": "The new user has been saved.",
+  "USERS_LIST": "Users list",
   "PASSPHRASE": "Passphrase",
+  "PASSWORD": "Password",
+  "EMAIL": "Email",
   "FILE": "File",
   "SUBMIT": "Submit",
   "BROWSE": "Browse"
