--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -8,7 +8,7 @@
   "ACCESS_FILE": "Accéder au fichier",
   "ACCESS_FILE_MSG": "Vous devez fournir une phrase secrète pour décrypter et obtenir le fichier.",
   "NEW_ACCOUNT": "Nouveau compte",
-  "NEW_ACCOUNT_MSG": "Créer un nouveau compte pour acceder à l'envoie de fichierd.",
+  "NEW_ACCOUNT_MSG": "Créer un nouveau compte pour acceder à l'envoie de fichiers.",
   "USER_SAVED": "Utilisateur sauvegardé",
   "USER_SAVED_MSG": "Le nouvel utilisateur a été crée.",
   "USERS_LIST": "Liste des utilisateurs",
