--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -19,5 +19,6 @@
   "EMAIL": "Courriel",
   "FILE": "Fichier",
   "SUBMIT": "Valider",
-  "BROWSE": "Explorer"
+  "BROWSE": "Explorer",
+  "LOGOUT": "Se déconnecter"
 }
