--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -14,11 +14,21 @@
   "USER_SAVED": "Utilisateur sauvegardé",
   "USER_SAVED_MSG": "Le nouvel utilisateur a été crée.",
   "USERS_LIST": "Liste des utilisateurs",
+  "USERS_LIST_MSG": "Liste des utilisateurs, vous pouvez en créer un",
+  "HERE": "ici",
   "PASSPHRASE": "Phrase de passe",
   "PASSWORD": "Mot de passe",
   "EMAIL": "Courriel",
+  "EMAILS": "Courriels",
+  "ACTIONS": "Actions",
   "FILE": "Fichier",
   "SUBMIT": "Valider",
   "BROWSE": "Explorer",
-  "LOGOUT": "Se déconnecter"
+  "LOGOUT": "Se déconnecter",
+  "INVALID_EMAIL": "Le courriel saisi est invalide.",
+  "INVALID_PASSWORD": "Le mot de passe saisi est invalide.",
+  "USER_DELETED": "Utilisateur supprimé",
+  "USER_DELETED_MSG": "L'utilisateur a été supprimé avec succès.",
+  "USER_NOT_DELETED": "Utilisateur non supprimé",
+  "USER_NOT_DELETED_MSG": "L'utilisateur n'a pas été supprimé : vous ne pouvez pas supprimer votre propre compte."
 }
